<resources>
    <string name="app_name">AppMobileFoot</string>
    <string name="player_button">Player</string>
    <string name="club_button">Club</string>
    <string name="app_text"> Application  Football  L1</string>
    <string name="todo">TODO</string>
    <string name="saison_2019_2020">Saison 2019/2020</string>
    <string name="description">Description</string>
    <string name="nom">Nom</string>
    <string name="player_name">Nom du joueur</string>
    <string name="player_club">Club</string>
    <string name="player_position">Position</string>
    <string name="player_nationality">Nationalité</string>
    <string name="club_stadium">Stadium</string>
    <string name="club_coach">Coach</string>
    <string name="club_president">President</string>
    <string name="club_creation">Date</string>
    <string name="classement_button">Classement</string>
    <string name="classement_text">Classement final de la saison 2019/2020 :</string>
    <string name="champion_text">Champion : Paris SG.</string>
    <string name="relegues_text"><![CDATA[Relégués : Amiens SC & Toulouse FC.]]></string>
    <string name="promu_text"><![CDATA[Promus : Lorient FC & Lens RC.]]></string>
</resources>
