<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    android:padding="6dip"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:id="@+id/icona"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher"
        android:visibility="visible"
        android:layout_below="@id/firstLine"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondLine"
        android:visibility="invisible"
        android:layout_below="@id/icona"
        android:layout_centerHorizontal="true"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/description"
        android:textSize="12sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstLine"
        android:layout_centerHorizontal="true"
        android:text="@string/nom"
        android:textSize="18sp"
        android:layout_alignWithParentIfMissing="true"/>

</RelativeLayout>